frontend/test/should_fail/index_exec_node_isInFromIndexFromTo_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s
{
	{ i:byte=isInNodesFromIndex(::n, fooi) }
}
